styling code and comments

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -161,7 +161,7 @@ msgstr "Retour aux articles"
 
 #: cms/templates/cms/article_page.html:80
 msgid "Comment on this article ("
-msgstr "Commentez cet article"
+msgstr "Commentez cet article ("
 
 #: cms/templates/cms/article_page.html:80
 msgid "sign in first"
